--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -19,13 +19,12 @@ jobs:
       run: |
         git clone https://github.com/googleapis/java-bigquery.git
         cd java-bigquery
+        mkdir -p ../../site/static/google-cloud-bigquery  # Make sure the output directory exists
+        rm -rf ../../site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
         git checkout v2.26.0
-        cd ..
-        mkdir -p ../site/static/google-cloud-bigquery  # Make sure the output directory exists
-        rm -rf ../site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
         cd java-bigquery/google-cloud-bigquery
         mvn javadoc:javadoc || true
-        cp target/site/apidocs/* ../site/static/google-cloud-bigquery/
+        cp target/site/apidocs/* ../../site/static/google-cloud-bigquery/
         cd ..
 #    - name: Read versions.txt and checkout source repositories
 #      run: |
