--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -24,7 +24,7 @@ jobs:
         git checkout v2.26.0
         cd google-cloud-bigquery
         mvn javadoc:javadoc || true
-        cp target/site/apidocs/* ../../site/static/google-cloud-bigquery/
+        cp target/site/apidocs/* ../../../../site/static/google-cloud-bigquery/
         cd ..
 #    - name: Read versions.txt and checkout source repositories
 #      run: |
