--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -23,9 +23,7 @@ jobs:
         cd java-bigquery
         git checkout v2.26.0
         cd google-cloud-bigquery
-        mvn javadoc:javadoc || true
-        cp target/site/apidocs/* ../../../../site/static/google-cloud-bigquery/
-        cd ..
+        mvn javadoc:javadoc -DdestDir=../../../../site/static/google-cloud-bigquery/ || true
 #    - name: Read versions.txt and checkout source repositories
 #      run: |
 #        while read repo directory tag; do
