--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -49,6 +49,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add ../site/static/*
+        git add --all
         git commit -m "Add Javadocs for ${repo}" -a || echo "No changes to commit"
         git push
