--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -23,7 +23,7 @@ jobs:
         cd java-bigquery
         git checkout v2.26.0
         cd google-cloud-bigquery
-        mvn javadoc:javadoc -DdestDir=../../../../site/static/google-cloud-bigquery/ || true
+        mvn javadoc:javadoc -DdestDir=../../site/static/google-cloud-bigquery/ || true
 #    - name: Read versions.txt and checkout source repositories
 #      run: |
 #        while read repo directory tag; do
@@ -46,6 +46,7 @@ jobs:
 
     - name: Commit Javadocs
       run: |
+        find site/static/ -name ".git" -type d -exec rm -rf {} + # Remove any .git files that could cause the script to create the files as a submodule
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add --all
