--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -17,8 +17,8 @@ jobs:
 
     - name: Manual checkout source and javadoc generation for testing purposes
       run: |
-        mkdir -p ../../site/static/google-cloud-bigquery  # Make sure the output directory exists
-        rm -rf ../../site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
+        mkdir -p site/static/google-cloud-bigquery  # Make sure the output directory exists
+        rm -rf site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
         git clone https://github.com/googleapis/java-bigquery.git
         cd java-bigquery
         git checkout v2.26.0
