--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -8,7 +8,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -42,3 +42,5 @@ jobs:
         git add .
         git commit -m "Add Javadocs for bigquery" -a || echo "No changes to commit"
         git push
+      env:
+        GH_TOKEN: ${{ github.token }}
