--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -28,11 +28,13 @@ jobs:
 
     - name: Manual checkout source and javadoc generation for testing purposes
       run: |
-        git clone https://github.com/googleapis/java-bigquery.git
-        cd java-bigquery
-        git checkout v2.26.0
-        cd google-cloud-bigquery
-        mvn javadoc:javadoc -Dmaven.javadoc.failOnError=false -DdestDir=../../site/static/google-cloud-bigquery/ || true
+        cd site/static/google-cloud-bigquery
+        echo "pineapples" > testfile.txt
+#        git clone https://github.com/googleapis/java-bigquery.git
+#        cd java-bigquery
+#        git checkout v2.26.0
+#        cd google-cloud-bigquery
+#        mvn javadoc:javadoc -Dmaven.javadoc.failOnError=false -DdestDir=../../site/static/google-cloud-bigquery/ || true
 
     - name: Commit Javadocs
       run: |
