--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -19,18 +19,23 @@ jobs:
 
     steps:
     - name: Checkout this repo
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        java-version: 11
+        cache: maven
 
     - name: Create or clear directories for the javadocs
       run: |
-        mkdir -p site/static/google-cloud-bigquery  # Make sure the output directory exists
+        mkdir -p site/static/google-cloud-bigquery # Make sure the output directory exists
         rm -rf site/static/google-cloud-bigquery/*  # Clear any existing files in the output directory
 
     - name: Manual checkout source and javadoc generation for testing purposes
       run: |
         git clone https://github.com/googleapis/java-bigquery.git
         git -C java-bigquery checkout v2.26.0
-        cp java-bigquery/google-cloud-bigquery/EnableAutoValue.txt site/static/google-cloud-bigquery
+        mvn -f google-cloud-bigquery/pom.xml javadoc:javadoc -Dmaven.javadoc.failOnError=false -Dmaven.javadoc.outputDirectory=/site/static/google-cloud-bigquery
 
     - name: Commit Javadocs
       run: |
