--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - name: Checkout this repo
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: Setup Java
-    - uses: actions/setup-java@v3
+      uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: 11
