--- a/.github/workflows/update_site_variables.yaml
+++ b/.github/workflows/update_site_variables.yaml
@@ -1,7 +1,6 @@
 name: Update site variables for Github Pages
 
 # Run this workflow upon published release
-# TODO:@alicejli this workflow is still untested. Once update_site_variables.py works, test this workflow
 on:
   release:
     types: [ published ]
@@ -18,10 +17,19 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.9'
 
-    - name: Update variables
-      run: python update_site_variables.py # Run script to update the site/data/variables.yaml file for the libraries_bom version
+    - name: Install dependencies
+      run: pip install pyyaml toml # Needed for update_site_params.py script
+
+    - name: Create and update initial variables.yaml
+      run: python parse_versionstxt.py # Run script to update the site/data/variables.yaml file for the libraries_bom version
+
+    - name: Update additional variables.yaml
+      run: python parse_google_cloud_bom_pom.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
+
+    - name: Update site params
+      run: python update_site_params.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Commit and push changes
       run: |
