--- a/.github/workflows/update_site_variables.yaml
+++ b/.github/workflows/update_site_variables.yaml
@@ -24,18 +24,15 @@ jobs:
 
     - name: Create and update initial variables.yaml
       run: |
-        git -C .github/workflows/javadocs_scripts
-        python parse_versionstxt.py # Run script to update the site/data/variables.yaml file for the libraries_bom version
+        python .github/workflows/javadocs_scripts/parse_versionstxt.py # Run script to update the site/data/variables.yaml file for the libraries_bom version
 
     - name: Update additional variables.yaml
       run: |
-        git -C .github/workflows/javadocs_scripts
-        python parse_google_cloud_bom_pom.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
+        python .github/workflows/javadocs_scripts/parse_google_cloud_bom_pom.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Update site params
       run: |
-        git -C .github/workflows/javadocs_scripts
-        python update_site_params.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
+        python .github/workflows/javadocs_scripts/update_site_params.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Commit and push changes
       run: |
