--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -39,31 +39,27 @@ jobs:
 
     - name: Read repo, directory, and tag from file
       id: read_file
-      run: echo "$(cat .github/workflows/javadocs_scripts/repoVersions.txt)" > env_file.env
-
-    - name: Extract repo, directory, and tag
-      id: extract_info
       run: |
         while IFS= read -r line
         do
-          repo=$(echo $line | cut -d' ' -f1)
-          directory=$(echo $line | cut -d' ' -f3)
-          tag=$(echo $line | cut -d' ' -f4)
+          repo=$(echo $line | awk -F ' || ' '{print $1}')
+          directory=$(echo $line | awk -F ' || ' '{print $2}')
+          tag=$(echo $line | awk -F ' || ' '{print $3}')
           echo "REPO=$repo" >> $GITHUB_ENV
           echo "DIRECTORY=$directory" >> $GITHUB_ENV
           echo "TAG=$tag" >> $GITHUB_ENV
-        done < env_file.env
+        done < ./github/workflows/javadocs_scripts/repoVersions.txt
 
     - name: Checkout specific tag and run script
       run: |
         while IFS= read -r line
         do
-          repo=$(echo $line | cut -d' ' -f1)
-          directory=$(echo $line | cut -d' ' -f3)
-          tag=$(echo $line | cut -d' ' -f4)
+          repo=$(echo $line | awk -F ' || ' '{print $1}')
+          directory=$(echo $line | awk -F ' || ' '{print $2}')
+          tag=$(echo $line | awk -F ' || ' '{print $3}')
 
           git -C "${directory}" checkout $tag
-        done < env_file.env
+        done < ./github/workflows/javadocs_scripts/repoVersions.txt
 
     - name: Update variables.yaml using google-cloud-java versions.txt and sdk-platform-java versions.txt files
       run: |
