--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -37,27 +37,14 @@ jobs:
         echo "Updating Github Pages site param for libraries-bom version"
         python .github/workflows/javadocs_scripts/update_site_params.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
 
-    - name: Read repo, directory, and tag from file
-      id: read_file
+    - name: Read repo, directory, and tag from file and clone repo
       run: |
         while IFS= read -r line
         do
           repo=$(echo $line | awk -F ' || ' '{print $1}')
           directory=$(echo $line | awk -F ' || ' '{print $3}')
           tag=$(echo $line | awk -F ' || ' '{print $5}')
-          echo "REPO=$repo" >> $GITHUB_ENV
-          echo "DIRECTORY=$directory" >> $GITHUB_ENV
-          echo "TAG=$tag" >> $GITHUB_ENV
-        done < .github/workflows/javadocs_scripts/repoVersions.txt
-
-    - name: Checkout specific tag and run script
-      run: |
-        while IFS= read -r line
-        do
-          repo=$(echo $line | awk -F ' || ' '{print $1}')
-          directory=$(echo $line | awk -F ' || ' '{print $3}')
-          tag=$(echo $line | awk -F ' || ' '{print $5}')
-
+          git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
         done < .github/workflows/javadocs_scripts/repoVersions.txt
 
