--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -46,21 +46,14 @@ jobs:
           tag=$(echo $line | awk -F ' || ' '{print $5}')
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
+          echo "Updating variables.yaml file using ${repo}'s version.txt file
+          python .github/workflows/javadocs_scripts/parse_versionstxt_automate.py ${directory}/versions.txt
         done < .github/workflows/javadocs_scripts/repoVersions.txt
-
-    - name: Wait for cloning to finish
-      run: |
-        while [ -n "$(jobs -r)" ]; do sleep 1; done
-
-    - name: Update variables.yaml using google-cloud-java versions.txt and sdk-platform-java versions.txt files
-      run: |
-        echo "Updating variables.yaml file using google-cloud-java and sdk-platform-java versions.txt files..."
-        python .github/workflows/javadocs_scripts/parse_versionstxt_secondary.py
 
     - name: Commit and push changes
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add ./site/data/variables.yaml ./site/config.toml
-        git commit -m "Update Github Pages site variables" || true
+        git commit -m "Update Github Pages site variables - automated" || true
         git push
