--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -46,7 +46,7 @@ jobs:
           tag=$(echo $line | awk -F ' || ' '{print $5}')
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
-          echo "Updating variables.yaml file using ${repo}'s version.txt file
+          echo "Updating variables.yaml file using ${repo}'s version.txt file"
           python .github/workflows/javadocs_scripts/parse_versionstxt_automate.py ${directory}/versions.txt
         done < .github/workflows/javadocs_scripts/repoVersions.txt
 
