--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -41,9 +41,9 @@ jobs:
       run: |
         while IFS= read -r line
         do
-          repo=$(echo $line | awk -F ' || ' '{print $1}')
-          directory=$(echo $line | awk -F ' || ' '{print $3}')
-          tag=$(echo $line | awk -F ' || ' '{print $5}')
+          repo=$(echo $line | awk -F ' \\|\\| ' '{print $1}')
+          directory=$(echo $line | awk -F ' \\|\\| ' '{print $3}')
+          tag=$(echo $line | awk -F ' \\|\\| ' '{print $5}')
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
           echo "Updating variables.yaml file using ${repo}'s version.txt file"
